@@ -18,6 +18,8 @@ Features added
 Bugs fixed
 ----------
 
+* #9078: autodoc: Async staticmethods and classmethods are considered as non
+  async coroutine-functions
 * #8870: The style of toctree captions has been changed with docutils-0.17
 * #9001: The style of ``sidebar`` directive has been changed with docutils-0.17
 
